/*
 * $Id$
 */

2010-04-08 15:05 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  samples/dbf_ctrls1/dbf_ctrls1.prg
     * removed unneeded spacer control

  *  wxharbour.spec
     * changed revision number to 1

2010-04-08 14:26 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  samples/dbf_ctrls1/dbf_ctrls1.prg
     % enhanced sample (thanks to Bruno Luciani to pointing it)

2010-04-08 12:44 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/common/wxhfuncs.prg
     ! Fixed comparing values by length

2010-04-08 12:38 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/common/wxhfuncs.prg
     ! Fixed compare for changed values on non TField values

2010-04-08 12:18 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  -  samples/GNUmakefile
  -  samples/makefile.gcc
  -  samples/makefile.vc
     * remove broked make files

2010-04-08 12:12 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/common/wxhfuncs.prg
     ! Fixed value returned by wxhHBValidator:EvalWarnBlock

2010-04-05 13:54 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/raddox/TTable.prg
     * minor code cleanup

2010-04-05 11:13 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/raddox/TTable.prg
     * do not show the error when trying to use a index that has not a compatible
       master key expression
       TODO: need to create a alert log for this

2010-04-04 23:43 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  README.xharbour_users
     * updated documentation, more to come

2010-04-04 23:31 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/wxharbour.ch
  *  src/common/wxhfuncs.prg
     % adding capability to accept the WARNING related codeblock as an codeblock var
       or as a PP converted one ( <{warnBlock}>  ) in all current ctrls that have
       this clause

  *  src/hrbcompat/tbrowse/wxhBrowse.prg
     % fire on the DataSource the OnDataChange event on:
       * RefreshAll